--- a/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
+++ b/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.h2.console.enabled=true
 logging.level.org.hibernate.SQL=debug
 
 # DataSource settings: set here your own configurations for the database 
-# connection. In this example we have "netgloo_blog" as database name and 
-# "root" as username and password.
+# connection. In this example we have "testspringdata" as database name and 
+# "root" as username and "554446666" as password .
 spring.datasource.url = jdbc:mysql://localhost:3306/testspringdata?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = 554446666
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
