--- a/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
+++ b/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.hibernate.SQL=debug
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "testspringdata" as database name and 
 # "root" as username and "554446666" as password .
-spring.datasource.url = jdbc:mysql://localhost:3306/testspringdata?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/testspringdata?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 554446666
 
